--- a/project-bolt-sb1-eqyatgyk final v2 text to img/project/index.html
+++ b/project-bolt-sb1-eqyatgyk final v2 text to img/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Image Studio - Free Text to Image Generator</title>
+    <title>AI Image Studio - Text to Image Generator by Jaideep</title>
     <meta name="description" content="Create stunning AI-generated images for free. Professional text-to-image converter with multiple AI models. Perfect for YouTube creators, designers, and content creators." />
     <meta name="keywords" content="AI image generator, text to image, free AI art, stable diffusion, image creation, AI art generator" />
     <meta name="author" content="AI Image Studio" />
